# Setup_ESP32-S3_Xtensa

./: Cargo.toml  ESP32S3_SETUP.md  README.md
.cargo/: config.toml
src/: main.rs
