[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.19", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.1.0-rc.0", features = ["esp32s3"] }
esp-println = { version = "0.17", features = ["esp32s3"] }
xtensa-lx-rt = "0.22.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
